--- a/Avalonia.Tiels/Controls/TileManageListEntry.axaml
+++ b/Avalonia.Tiels/Controls/TileManageListEntry.axaml
@@ -36,6 +36,6 @@
 		<Button Grid.Column="2" Classes="icon" Content="󿚞"/>
 		<Button Grid.Column="3" Classes="icon" Content="󿚐"/>
 		<Button Grid.Column="4" Classes="icon" Content="󿚠"/>
-		<Button Grid.Column="5" Classes="icon" Content="󿚨" Foreground="#FF0000"/>
+		<Button Grid.Column="5" Classes="icon" Content="󿚨" Foreground="#FF0000" Click="DestroyTile"/>
 	</Grid>
 </UserControl>
