--- a/Avalonia.Tiels/Controls/TileManageListEntry.axaml
+++ b/Avalonia.Tiels/Controls/TileManageListEntry.axaml
@@ -33,7 +33,7 @@
 		<TextBlock Grid.Column="1"
 		           Padding="10,0"
 		           VerticalAlignment="Center" Text="{Binding Text, RelativeSource={RelativeSource AncestorType={x:Type controls:TileManageListEntry}}}"/>
-		<Button Grid.Column="2" Classes="icon" Content="󿚞"/>
+		<Button Grid.Column="2" Classes="icon" Content="󿚞" ToolTip.Tip=""/>
 		<Button Grid.Column="3" Classes="icon" Content="󿚐"/>
 		<Button Grid.Column="4" Classes="icon" Content="󿚠"/>
 		<Button Grid.Column="5" Classes="icon" Content="󿚨" Foreground="#FF0000" Click="DestroyTile"/>
