--- a/Avalonia.Tiels/TileWindow.axaml
+++ b/Avalonia.Tiels/TileWindow.axaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
         x:Class="Avalonia.Tiels.TileWindow"
         TransparencyLevelHint="Transparent"
-        Title="TileWindow" Opened="OnLoad" Background="{x:Null}" ShowInTaskbar="False" MinHeight="20" MinWidth="100"
+        Title="TileWindow" Opened="OnLoad" Background="{x:Null}" ShowInTaskbar="False" MinHeight="20" MinWidth="120"
         SystemDecorations="None">
     <Window.Styles>
         <Style Selector="TextBlock.Dark">
@@ -58,7 +58,7 @@
                 <Button Grid.Column="0" x:Name="HideBtn" Click="ToggleHideMode" Classes="EditBar Arrow" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite" VerticalContentAlignment="Center">󿚗</Button>
                 <Button Grid.Column="1" x:Name="OpenDirBtn" Click="OpenContentDirectory" Classes="EditBar" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite" VerticalContentAlignment="Center">󿚞</Button>
                 <Button Grid.Column="2" x:Name="RotateBtn" Classes="EditBar" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite" VerticalContentAlignment="Center">󿚟</Button>
-                <Button Grid.Column="3" x:Name="RenameBtn" Click="ToggleEditMode" Classes="EditBar" VerticalContentAlignment="Center" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite">󿚠</Button>
+                <Button Grid.Column="3" x:Name="RenameBtn" Click="ToggleEditMode" Classes="EditBar" VerticalContentAlignment="Center" FontFamily="avares://Avalonia.Tiels/Assets#lucidelite">󿚪</Button>
             </Grid>
             <TextBlock Grid.Row="1" x:Name="TileName" Classes="EditBar" VerticalAlignment="Center" HorizontalAlignment="Center" TextAlignment="Center">{Name}</TextBlock>
         </Grid>
