--- a/Avalonia.Tiels/Controls/AppearanceComponent.axaml
+++ b/Avalonia.Tiels/Controls/AppearanceComponent.axaml
@@ -6,9 +6,9 @@
              xmlns:avaloniaColorPicker="clr-namespace:AvaloniaColorPicker;assembly=AvaloniaColorPicker"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Avalonia.Tiels.Controls.AppearanceComponent">
-	<StackPanel>
-        <CheckBox x:Name="UseGlobalThemeBox" Margin="0,10,0,0" Content="{x:Static p:Resources.UseGlobalTheme}" IsChecked="True"/>
-        <StackPanel x:Name="CustomAppearanceGrid" Margin="0,5,0,0" IsEnabled="False">
+	<StackPanel Spacing="5">
+        <CheckBox x:Name="UseGlobalThemeBox" Content="{x:Static p:Resources.UseGlobalTheme}" IsChecked="True"/>
+        <StackPanel x:Name="CustomAppearanceGrid" IsEnabled="False">
             <StackPanel>
                 <WrapPanel><Label Content="{x:Static p:Resources.ThemeMode}"/><Label FontFamily="avares://Avalonia.Tiels/Assets#lucidelite" Content="󿚙" Padding="2,5,0,0"><ToolTip.Tip>
                     <TextBlock Text="{x:Static p:Resources.ThemeModeTooltip}"/>
