--- a/Avalonia.Tiels/Controls/TileManageListEntry.axaml
+++ b/Avalonia.Tiels/Controls/TileManageListEntry.axaml
@@ -34,7 +34,7 @@
 		           Padding="10,0"
 		           VerticalAlignment="Center" Text="{Binding Text, RelativeSource={RelativeSource AncestorType={x:Type controls:TileManageListEntry}}}"/>
 		<Button Grid.Column="2" Classes="icon" Content="󿚞" ToolTip.Tip="Open Directory" ToolTip.Placement="Left"/>
-		<Button Grid.Column="3" Classes="icon" Content="󿚐" ToolTip.Tip="Change Appearance" ToolTip.Placement="Left"/>
+		<Button Grid.Column="3" Classes="icon" Content="󿚐" ToolTip.Tip="Modify" ToolTip.Placement="Left"/>
 		<Button Grid.Column="4" Classes="icon" Content="󿚠" ToolTip.Tip="Rename" ToolTip.Placement="Left"/>
 		<Button Grid.Column="5" Classes="icon" Content="󿚨" Foreground="#FF0000" Click="DestroyTile" ToolTip.Tip="Remove" ToolTip.Placement="Left"/>
 	</Grid>
