--- a/Avalonia.Tiels/Pages/Create/TilePage.axaml
+++ b/Avalonia.Tiels/Pages/Create/TilePage.axaml
@@ -7,15 +7,15 @@
              xmlns:controls="clr-namespace:Avalonia.Tiels.Controls"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Avalonia.Tiels.Pages.Create.TilePage">
-    <StackPanel Margin="10">
-        <TextBlock FontSize="16" Margin="0,0,0,10" Foreground="{StaticResource BaseTitleColor}" Text="{x:Static p:Resources.CreateLabel}"/>
+    <StackPanel Margin="10" Spacing="10">
+        <TextBlock FontSize="16" Foreground="{StaticResource BaseTitleColor}" Text="{x:Static p:Resources.CreateLabel}"/>
         <Label Content="{x:Static p:Resources.Name}"/>
         <TextBox x:Name="NameBox" Watermark="{x:Static p:Resources.NameOfTileWatermark}"/>
-        <StackPanel x:Name="TilePathPanel" Margin="0,10,0,0" IsVisible="False">
+        <StackPanel x:Name="TilePathPanel" IsVisible="False">
             <Label Content="{x:Static p:Resources.TilePath}"/>
             <TextBox x:Name="PathBox" Watermark="{x:Static p:Resources.NameOfTileWatermark}"/>
         </StackPanel>
-        <Label Content="{x:Static p:Resources.Size}" Margin="0,10,0,0"/>
+        <Label Content="{x:Static p:Resources.Size}"/>
         <WrapPanel x:Name="TileSizePanel">
             <TextBox x:Name="SizeXBox" Watermark="???" Margin="0,0,10,0"/>
             <TextBox x:Name="SizeYBox" Watermark="???"/>
