Add temporary context menu

--- a/Avalonia.Tiels/Controls/EntryComponent.axaml
+++ b/Avalonia.Tiels/Controls/EntryComponent.axaml
@@ -22,6 +22,22 @@
 			           VerticalAlignment="Bottom" HorizontalAlignment="Center" TextAlignment="Left" Text="{Binding EntryNameShort, RelativeSource={RelativeSource AncestorType={x:Type controls:EntryComponent}}}"/>
 			<TextBlock Grid.Row="0" Initialized="AttributeIconInitialized" x:Name="FileAttributeIcon"
 			           FontFamily="avares://Avalonia.Tiels/Assets#lucidelite" Foreground="#0068FF" VerticalAlignment="Bottom" HorizontalAlignment="Right" Padding="10,0" FontSize="16">󿚦</TextBlock>
+			<TextBox Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" x:Name="FileRenameBox" IsVisible="False"/>
+			<Grid.ContextMenu>
+				<!--
+				This is temporary. I don't see easy way to implement Windows Explorer context menu in Avalonia C#.
+				If someone knows how to do it, please let me know. If you want to help, make a pull request.				
+				-->
+				<ContextMenu>
+					<MenuItem Header="Open" Click="EntryClicked"/>
+					<Separator/>
+					<MenuItem Header="Copy"/>
+					<MenuItem Header="Rename" Click="RenameEntry" LostFocus="ApplyRename"/>
+					<MenuItem Header="Delete" Click="DeleteEntry"/>
+					<Separator/>
+					<MenuItem Header="Show in Explorer" Click="ShowInExplorer"/>
+				</ContextMenu>
+			</Grid.ContextMenu>
 		</Grid>
 	</Button>
 </UserControl>
