--- a/Avalonia.Tiels/Controls/EntryComponent.axaml
+++ b/Avalonia.Tiels/Controls/EntryComponent.axaml
@@ -6,6 +6,7 @@
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
              x:Class="Avalonia.Tiels.Controls.EntryComponent">
 	<Button DataContext="{Binding RelativeSource={RelativeSource Self}}"
+	        x:Name="SelfButton"
 	        HorizontalAlignment="Stretch"
 	        Background="Transparent"
 	        Click="EntryClicked"
@@ -23,21 +24,6 @@
 			<TextBlock Grid.Row="0" Initialized="AttributeIconInitialized" x:Name="FileAttributeIcon"
 			           FontFamily="avares://Avalonia.Tiels/Assets#lucidelite" Foreground="#0068FF" VerticalAlignment="Bottom" HorizontalAlignment="Right" Padding="10,0" FontSize="16">󿚦</TextBlock>
 			<TextBox Grid.Row="1" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" x:Name="FileRenameBox" IsVisible="False"/>
-			<Grid.ContextMenu>
-				<!--
-				This is temporary. I don't see easy way to implement Windows Explorer context menu in Avalonia C#.
-				If someone knows how to do it, please let me know. If you want to help, make a pull request.				
-				-->
-				<ContextMenu>
-					<MenuItem Header="Open" Click="EntryClicked"/>
-					<Separator/>
-					<MenuItem Header="Copy"/>
-					<MenuItem Header="Rename" Click="RenameEntry" LostFocus="ApplyRename"/>
-					<MenuItem Header="Delete" Click="DeleteEntry"/>
-					<Separator/>
-					<MenuItem Header="Show in Explorer" Click="ShowInExplorer"/>
-				</ContextMenu>
-			</Grid.ContextMenu>
 		</Grid>
 	</Button>
 </UserControl>
