--- a/Avalonia.Tiels/App.axaml
+++ b/Avalonia.Tiels/App.axaml
@@ -2,7 +2,7 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              x:Class="Avalonia.Tiels.App">
     <Application.Styles>
-        <FluentTheme Mode="Dark"/>
+        <FluentTheme/>
         <Style Selector="Button.link">
             <Setter Property="Foreground" Value="Blue" />
             <Setter Property="Padding" Value="0" />
